// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineSizing renders 0 1`] = `
Array [
  .c0 {
  line-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders function 1`] = `
Array [
  .c0 {
  line-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders invalid theme path 1`] = `
Array [
  .c0 {
  line-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders negative number 1`] = `
Array [
  .c0 {
  line-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-sizing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-sizing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    line-sizing: July;
  }
}

@media April {
  .c0 {
    line-sizing: August;
  }
}

@media January {
  .c0 {
    line-sizing: September;
  }
}

@media April {
  .c0 {
    line-sizing: November;
  }
}

@media June {
  .c0 {
    line-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-sizing: July;
  }
}

@media April {
  .c0 {
    line-sizing: August;
  }
}

@media January {
  .c0 {
    line-sizing: September;
  }
}

@media April {
  .c0 {
    line-sizing: November;
  }
}

@media June {
  .c0 {
    line-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-sizing: January;
  }
}

@media April {
  .c0 {
    line-sizing: December;
  }
}

@media January {
  .c0 {
    line-sizing: April;
  }
}

@media April {
  .c0 {
    line-sizing: May;
  }
}

@media June {
  .c0 {
    line-sizing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-sizing: January;
  }
}

@media April {
  .c0 {
    line-sizing: December;
  }
}

@media January {
  .c0 {
    line-sizing: April;
  }
}

@media April {
  .c0 {
    line-sizing: May;
  }
}

@media June {
  .c0 {
    line-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders postitive number 1`] = `
Array [
  .c0 {
  line-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders string 1`] = `
Array [
  .c0 {
  line-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineSizing renders valid theme path 1`] = `
Array [
  .c0 {
  line-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
